--- a/TestiView/index_prod.html
+++ b/TestiView/index_prod.html
@@ -2,16 +2,16 @@
 <html lang="zh-CN">
 
 <head>
-    <title>iView project</title>
+    <title>点餐</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-    <link rel="stylesheet" href="/dist/main.c83e859fbbcb67cb1d12.css">
+    <link rel="stylesheet" href="/dist/main.1b26b850c0c45691c635.css">
 </head>
 
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/dist/vendors.c83e859fbbcb67cb1d12.js"></script>
-    <script type="text/javascript" src="/dist/main.c83e859fbbcb67cb1d12.js"></script>
+    <script type="text/javascript" src="/dist/vendors.1b26b850c0c45691c635.js"></script>
+    <script type="text/javascript" src="/dist/main.1b26b850c0c45691c635.js"></script>
 </body>
 
 </html>
